<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TextView
            android:id="@+id/ingredientsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/ingredient"
            android:paddingStart="@dimen/recipe_padding"
            android:paddingLeft="@dimen/recipe_padding"
            android:paddingTop="@dimen/recipe_padding"
            android:background="@color/ingredientColor"
            android:paddingBottom="@dimen/padding_5dp"
            android:layout_margin="@dimen/padding_5dp"/>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/stepsRecylerView"
        android:paddingTop="@dimen/recipe_padding"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>
</ScrollView>