<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/stepDetailLayout">


    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/videoPlayerView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exo_width"
        android:layout_margin="10dp"/>

    <ImageView
        android:id="@+id/thumbImageView"
        android:paddingRight="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/stepDescriptionTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/stepDescription"
        android:layout_marginBottom="10dp"
        android:layout_margin="@dimen/padding_5dp"
        android:background="@color/ingredientColor"
        />



</LinearLayout>

</ScrollView>